--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="top-container">
         <img class="top-cloud" src="images/CSS - My Site Images/cloud.png" alt="cloud-img">
-        <h1 class="p1">Areh! agaya tum...Pricccccham</h1>
+        <h1 class="p1">Areh! beta...Pricccccham</h1>
         <p class="p2">hmm <em>welcome bruhhh!</em></p>
         <img class="buttom-cloud" src="images/CSS - My Site Images/cloud.png" alt="cloud-img">
         <img src="images\CSS - My Site Images\mountain.png" alt="mountain-img">
